{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 51,
  "lineage": "a499ea3a-dcd5-efeb-f4a5-049763e4f987",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "moim-app-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-016479f00414e3741",
            "domain": "vpc",
            "id": "eipalloc-0ecd3588185ef2b04",
            "instance": "i-077521f2cedfb2253",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04b4b74ca7fedf215",
            "private_dns": "ip-10-10-1-227.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.227",
            "public_dns": "ec2-54-151-144-229.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.144.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "moim-app-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.moim-app",
            "aws_security_group.moim-app",
            "aws_subnet.moim-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "moim-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20b8b385217763f",
            "arn": "arn:aws:ec2:ap-southeast-1:905443795573:instance/i-077521f2cedfb2253",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077521f2cedfb2253",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "moim-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b4b74ca7fedf215",
            "private_dns": "ip-10-10-1-227.ap-southeast-1.compute.internal",
            "private_ip": "10.10.1.227",
            "public_dns": "ec2-54-254-190-30.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.190.30",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-00ee5262d780f7c1b",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-06d49e50f898d3586",
            "tags": {
              "Name": "moim-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0055d17415df398da"
            ]
          },
          "dependencies": [
            "aws_security_group.moim-app",
            "aws_subnet.moim-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "moim-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905443795573:internet-gateway/igw-02acf05188d0dd351",
            "id": "igw-02acf05188d0dd351",
            "owner_id": "905443795573",
            "tags": {
              "Name": "moim-igw"
            },
            "vpc_id": "vpc-07313ec5788643906"
          },
          "dependencies": [
            "aws_vpc.moim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "moim-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d43c06c18f677f5",
            "owner_id": "905443795573",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02acf05188d0dd351",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "moim-public"
            },
            "vpc_id": "vpc-07313ec5788643906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.moim-igw",
            "aws_vpc.moim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "moim-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089f838f879ddc735",
            "route_table_id": "rtb-00d43c06c18f677f5",
            "subnet_id": "subnet-06d49e50f898d3586"
          },
          "dependencies": [
            "aws_internet_gateway.moim-igw",
            "aws_route_table.moim-public",
            "aws_subnet.moim-public",
            "aws_vpc.moim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "moim-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905443795573:security-group/sg-0055d17415df398da",
            "description": "security group that allow to Moim Services and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0055d17415df398da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "moim application",
                "from_port": 40000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 49999
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "moim application",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [
                  "43.231.128.61/32",
                  "103.58.100.34/32"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "moim-app",
            "name_prefix": "",
            "owner_id": "905443795573",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07313ec5788643906"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.moim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "moim-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905443795573:subnet/subnet-06d49e50f898d3586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-06d49e50f898d3586",
            "map_public_ip_on_launch": true,
            "owner_id": "905443795573",
            "tags": {
              "Name": "moim-public"
            },
            "vpc_id": "vpc-07313ec5788643906"
          },
          "dependencies": [
            "aws_vpc.moim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "moim-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:905443795573:vpc/vpc-07313ec5788643906",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b62a213eee665ec6",
            "default_route_table_id": "rtb-01274caa66f62ca4d",
            "default_security_group_id": "sg-02bc4e2a96248b444",
            "dhcp_options_id": "dopt-ea022c8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07313ec5788643906",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01274caa66f62ca4d",
            "owner_id": "905443795573",
            "tags": {
              "Name": "moim-vpc"
            }
          }
        }
      ]
    }
  ]
}